Fixed unhide button visibility

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,10 @@ body {
     display: none;
 }
 
+.invisible {
+    visibility: hidden;
+}
+
 .tabs,
 .buildings-subtabs,
 .research-subtabs,
